5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1692_1101.log
== TEST (2019-04-30 19:29:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", R, ",", I, ",", c)
if(tipo=="R" and consumo<=500 and consumo >500):
R=consumo*0,44 or consumo*0,65
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
C=consumo*0,55 or consumo*0,60
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
I=consumo*0,55 or consumo*0,60
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 7
    R=consumo*0,44 or consumo*0,65
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:30:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", R, ",", I, ",", c)
if(tipo=="R" and consumo<=500 and consumo >500):
	elif(consumo*0,44 or consumo*0,65)
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	elif(consumo*0,55 or consumo*0,60)
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	elif(consumo*0,55 or consumo*0,60)
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 7
    elif(consumo*0,44 or consumo*0,65)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:31:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", R, ",", I, ",", c)
if(tipo=="R" and consumo<=500 and consumo >500):
	elif(consumo*0.44 or consumo*0.65)
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	elif(consumo*0.55 or consumo*0.60)
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	elif(consumo*0.55 or consumo*0.60)
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 7
    elif(consumo*0.44 or consumo*0.65)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:32:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", R, ",", I, ",", c)
if(tipo=="R" and consumo<=500 and consumo >500):
	if consumo*0.44 or consumo*0.65
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	if consumo*0.55 or consumo*0.60
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	if consumo*0.55 or consumo*0.60
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 7
    if consumo*0.44 or consumo*0.65
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:32:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", R, ",", I, ",", c)
if(tipo=="R" and consumo<=500 and consumo >500):
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entradas:", R, ",", I, ",", c)
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:33:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", "x kwh e tipo y")
if(tipo=="R" and consumo<=500 and consumo >500):
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(tipo=="R" and consumo<=500 and consumo >500):
NameError: name 'tipo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:34:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
print("Entradas:", "x kwh" e "tipo y")
if(tipo=="R" and consumo<=500 and consumo >500):
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 5
    print("Entradas:", "x kwh" e "tipo y")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:36:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e c para comercios:")
print("Entradas:", "kwh" e "tipo y")
if(tipo=="R" and consumo<=500 and consumo >500):
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 6
    print("Entradas:", "kwh" e "tipo y")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:36:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e c para comercios:")
print("Entradas:", "kwh" e "tipo")
if(tipo=="R" and consumo<=500 and consumo >500):
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	print(round(consumo,2))
else:
	print("Valor total")

-- ERROR:
File "XXXX", line 6
    print("Entradas:", "kwh" e "tipo")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:39:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e c para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >500):
	mensagem=consumo*0,44
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	mensagem=consumo*0,55
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	mensagem=consumo*0,55
	print(round(consumo,2))
else:
	print("Valor total")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:39:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >500):
	mensagem=consumo*0,44
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	mensagem=consumo*0,55
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	mensagem=consumo*0,55
	print(round(consumo,2))
else:
	print("Valor total")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:40:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >500):
	mensagem=consumo*0,44
	print(round(consumo,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	mensagem=consumo*0,55
	print(round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	mensagem=consumo*0,55
	print(round(consumo,2))
else:
	print("Valor total:")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Valor total:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:42:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(consumo,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(consumo,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:43:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:50:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total:R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:51:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total:R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:51:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:52:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:55:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:55:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.17717
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:55:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo)
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:56:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
print("Entradas:", consumo, "kwh e tipo", tipo.upper())
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:58:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kwh e tipo", tipo.upper())
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.142035
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:58:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R" and consumo<=500 and consumo >0):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo<=1000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo<=5000 and consumo>0):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.205311
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:00:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R" and consumo>0 and consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>0 and consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo>0 and consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:00:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R" and consumo>0 and consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R" and consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>0 and consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C" and consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I" and consumo>0 and consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I" and consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:02:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem,2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.179157
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$"+ round(mensagem,2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$"+ round(mensagem,2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.118528
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:04:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:05:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.18592
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:06:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$", round(mensagem, 2))
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:07:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.147587
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:08:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.135079
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:08:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>0) and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.184657
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:08:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>0) and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.142485
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:10:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R para residencias, I para industrias, e C para comercios:")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>0) and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.161867
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:12:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("consumo de energia:"))
tipo=input("o tipo de instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas:", consumo, "kWh e tipo", tipo.upper())
if(tipo=="R") and (consumo>0) and (consumo <=500):
	mensagem=consumo*0,44
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="R") and (consumo>0) and (consumo>500 ):
	mensagem=consumo*0,65
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	mensagem=consumo*0,55
	print("Valor total: R$", round(mensagem, 2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	mensagem=consumo*0,55
	print("Valor total: R$",round(mensagem, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000 ):
	mensagem=consumo*0,60
	print("Valor total: R$",round(mensagem, 2))
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.173813
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:15:17) 
-- CODE:
consumo=float(input("consumo de energia em kwh: "))
tipo=input("tipo de instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: ",consumo,"kWh", " e tipo",tipo.upper())
if (tipo== "R") and (consumo>0) and (consumo<=500):
	total= consumo*0.44
	print("Valor total: R$",round(total, 2))
elif (tipo== "R") and (consumo>0) and (consumo>500):
	total= consumo*0.65
	print("Valor total: R$",round(total, 2))
elif (tipo=="C") and (consumo>0) and (consumo<=1000):
	total= consumo*0.55
	print("Valor total: R$",round(total, 2))
elif (tipo=="C") and (consumo>0) and (consumo>1000):
	total= consumo*0.60
	print("Valor total: R$",round(total, 2))
elif (tipo=="I") and (consumo>0) and (consumo<=5000):
	total=consumo*0.55
	print("Valor total: R$",round(total, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000):
	total=consumo*0.60
	print("Valor total: R$",round(total, 2))
else:
	print("Dados invalidos")
	

-- OUTPUT:
Entradas:  -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:15:36) 
-- CODE:
consumo=float(input("consumo de energia em kwh: "))
tipo=input("tipo de instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: ",consumo,"kWh", " e tipo",tipo.upper())
if (tipo== "R") and (consumo>0) and (consumo<=500):
	total= consumo*0.44
	print("Valor total: R$",round(total, 2))
elif (tipo== "R") and (consumo>0) and (consumo>500):
	total= consumo*0.65
	print("Valor total: R$",round(total, 2))
elif (tipo=="C") and (consumo>0) and (consumo<=1000):
	total= consumo*0.55
	print("Valor total: R$",round(total, 2))
elif (tipo=="C") and (consumo>0) and (consumo>1000):
	total= consumo*0.60
	print("Valor total: R$",round(total, 2))
elif (tipo=="I") and (consumo>0) and (consumo<=5000):
	total=consumo*0.55
	print("Valor total: R$",round(total, 2))
elif (tipo=="I") and (consumo>0) and (consumo>5000):
	total=consumo*0.60
	print("Valor total: R$",round(total, 2))
else:
	print("Dados invalidos")
	

-- EXECUTION TIME:
0.188946
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh  e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
